--- a/Task-25/index.html
+++ b/Task-25/index.html
@@ -29,34 +29,24 @@
 </style>
 <body>
     <div class="container">
-        <div class="block1">
-            <label id="g" for="first">🎅</label>
-            <br>
-            <br>
+        <div class="block">
+            <label >🎅</label>
             <input id="first" readonly="readonly" value="0" >
         </div>
-        <div class="block2">
-            <label for="second">😊</label>
-            <br>
-            <br>
+        <div class="block">
+            <label >😊</label>
             <input id="second" readonly="readonly" value="0" >
         </div>
-        <div class="block3">
-            <label for="third">🥶</label>
-            <br>
-            <br>
+        <div class="block">
+            <label>🥶</label>
             <input id="third" readonly="readonly" value="0" >
         </div>
-        <div class="block4">
-            <label for="forth">🤧</label>
-            <br>
-            <br>
+        <div class="block">
+            <label>🤧</label>
             <input id="forth" readonly="readonly" value="0" >
         </div>
-        <div class="block5">
-            <label for="fifth">🎁</label>
-            <br>
-            <br>
+        <div class="block">
+            <label>🎁</label>
             <input id="fifth" readonly="readonly" value="0" >
         </div>
     </div>
